--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,15 +1,14 @@
 name: playground
-description: A sample command-line application with basic argument parsing.
+description: Dart Playground
 version: 0.0.1
-# repository: https://github.com/my_org/my_repo
+# repository: https://github.com/vpetreski/playground.dart
 
 environment:
   sdk: ^3.8.1
 
-# Add regular dependencies here.
 dependencies:
-  args: ^2.5.0
+  args: ^2.7.0
 
 dev_dependencies:
-  lints: ^5.0.0
-  test: ^1.24.0
+  lints: ^6.0.0
+  test: ^1.26.3
